k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-demo-service
  namespace: devsu-demo-ns
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: devsu-demo
