k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-demo-ingress
  namespace: devsu-demo-ns
  labels:
    app: devsu-demo
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: devsu-demo-service
                port:
                  number: 80
